nova_tests/plan131/neg/ptr_arith_outside_unsafe.nv
// Plan 131 Ф.2 NEG — pointer arithmetic outside unsafe block rejected.
// `*(p + n) = v` requires unsafe context (E_UNSAFE_REQUIRED).
// EXPECT_COMPILE_ERROR E_UNSAFE_REQUIRED

module neg.ptr_arith_outside_unsafe

import std.runtime.raw_mem.{RawMem}

fn main() -> () {
    unsafe {
        ro p = RawMem.alloc(8) as *mut int
    }
    // Pointer deref/arith outside unsafe block — should fail with E_UNSAFE_REQUIRED.
    // Note: we need p in scope, so use a local unsafe fn style to get a pointer.
    mut x int = 0
    ro q = unsafe { &x }
    // Deref arithmetic outside unsafe — E_UNSAFE_REQUIRED.
    *(q + 0) = 42
}
